[gd_scene load_steps=3 format=3 uid="uid://rffmu5nc3g5s"]

[ext_resource type="Script" path="res://Fish/Player.gd" id="1_ix3g4"]
[ext_resource type="Texture2D" uid="uid://cidgxhry7xgi" path="res://Fish/CreatureSprites/SpaceCreature1.png" id="2_mb3ac"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 4
motion_mode = 1
script = ExtResource("1_ix3g4")

[node name="PhysicalBody" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(9, -19, 16, -8, 17, 3, 16, 18, 0, 21, -18, 18, -19, 2, -18, -8, -10, -19)

[node name="AreaBody" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionBody" type="CollisionPolygon2D" parent="AreaBody"]
polygon = PackedVector2Array(9, -19, 16, -8, 17, 3, 16, 18, 0, 21, -18, 18, -19, 2, -18, -8, -10, -19)

[node name="PlayerSprite" type="Sprite2D" parent="AreaBody/CollisionBody"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_mb3ac")

[node name="SizeLabel" type="Label" parent="."]
visible = false
offset_left = -40.0
offset_top = -55.0
offset_right = 40.0
offset_bottom = -30.0
text = "Size"
horizontal_alignment = 1

[connection signal="area_entered" from="AreaBody" to="." method="_on_area_body_area_entered"]
